--- a/src/styles/09/index.module.css
+++ b/src/styles/09/index.module.css
@@ -5,7 +5,7 @@
 .boll {
     width: 150px;
     height: 150px;
-    margin: 30px 7rem 0 3rem;
+    margin: 3rem 7rem 0 3rem;
     border-radius: 50%;
     position: relative;
     background: tomato;
